@@ -2,6 +2,10 @@ class UpdateReleasedBinaries
 
   attr_accessor :event
 
+  def self.job_queue
+    'releasetracking'
+  end
+
   def initialize(event)
     self.event = event
   end
