@@ -31,10 +31,13 @@ Features
 
  * webui handles package sources supporting project links.
 
+ * optional binary package tracking, can be used to track released packages.
+   Esp. important for maintained products.
+
 Changes on purpose:
 ===================
 
- *
+ * some delayed jobs run in seperate queues now to avoid to block other jobs
 
 Incompatible changes:
 =====================
